# Course-Learn-Rust-by-CodeShow

./: README.md
course-00-hello/: hello.rs
course-01-hello-cargo/: Cargo.toml
course-02-variables-and-scopes/: Cargo.toml
course-02-variables-and-scopes/src/: main.rs
course-03-primitives/: Cargo.toml
course-03-primitives/src/: main.rs
course-04-strings/: Cargo.toml
course-04-strings/src/: main.rs
course-05-echo/: Cargo.toml
course-05-echo/src/: main.rs
course-06-strings/: Cargo.toml
course-06-strings/src/: main.rs
course-07-calc/: Cargo.toml
course-07-calc/src/: main.rs
course-08-functions/: Cargo.toml
course-08-functions/src/: main.rs
course-09-ownership-borrowing/: Cargo.toml
course-09-ownership-borrowing/src/: main.rs
