[package]
name = "course-05-echo"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
strip = true      # Automatically strip symbols from the binary
opt-level = "z"   # Optimize for size
lto = true        # Enable LTO
codegen-units = 1 # Use a single codegen for size optimization
panic = "abort"   # Remove traceback information